--- a/public/peppertablet/css.css
+++ b/public/peppertablet/css.css
@@ -89,8 +89,15 @@ li{
 	height:85vh;
 
 	width:85vw;
-	padding-left: 15px;
-	padding-top: 15px;
+	padding-left: 30px;
+	padding-top: 30px;
 	background-color:rgb(240,242,244);
 
+}
+
+.youtube{
+	height:85vh;
+   margin-left:-30px;
+   margin-top:-30px;
+	width:85vw;
 }
