--- a/public/peppertablet/css.css
+++ b/public/peppertablet/css.css
@@ -2,7 +2,7 @@ body{
  padding:0px;
  margin:0px;
  overflow:hidden;
- font-size:2.7em;
+ font-size:20px;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
   font-weight: 300;
 }
